--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ celery.sqlite
 .ipynb_checkpoints/Week2-3-checkpoint.ipynb
 .ipynb_checkpoints/Week2-0-checkpoint.ipynb
 .ipynb_checkpoints/Week2-1-checkpoint.ipynb
+celery.sqlite
